* 2014-09-05 - marc.arens@open-xchange.com

 - Fix for bug 34196: Deny access to documentconverterws by default
 
* 2014-09-05 - thorben.betten@open-xchange.com

 - Fix for bug 32634: Distribute received push event remotely to other cluster nodes

* 2014-09-04 - jan.bauerdick@open-xchange.com

 - Fix for bug 34249: Use EventFiringInfostoreFacade instead of InfostoreFacade, events will trigger deletion of preview images

* 2014-09-03 - jan.bauerdick@open-xchange.com

 - Fix for bug 33935: Print database name if id is unset

* 2014-09-02 - tobias.friedrich@open-xchange.com

 - Fix for bug 34248: Batch-invalidate all contexts in a schema during blocking update tasks

* 2014-09-02 - jan.bauerdick@open-xchange.com

 - Fix for bug 34249: Delete empty folders from file system

* 2014-09-02 - marcus.klein@open-xchange.com

 - Fix for bug 31612: Using a new connection to config database to determine if a just created schema needs to be deleted again on context
                      creation failure.
 - Fix for bug 33401: Do not use representative context identifier for listing filestores with usage anymore because context could have been
                      deleted in the meantime. Try all context identifier of the given filestore context block.

* 2014-09-02 - thorben.betten@open-xchange.com

 - Fix for bug 33956: Perform safe flush on socket output stream to not prevent reading returned SMTP return code if SMPT server closes
                      associated connection on its own immediately
 - Fix for bug 33967: Avoid 102 Processing interim responses for requests executed by USM component

* 2014-09-01 - marcus.klein@open-xchange.com

 - Fix for bug 34236: Marked xingsubscribe.properties in open-xchange-subscribe package as a configuration file.

* 2014-09-01 - tobias.friedrich@open-xchange.com

 - Fix for bug 32695: Try to lookup existing stored session during form login if auto-login is enabled

* 2014-08-29 - thorben.betten@open-xchange.com
